# GoMode

./: BUILD_INSTRUCTIONS.md  build.gradle  gradlew  settings.gradle
.emergent/: emergent.yml  summary.txt
.github/workflows/: build.yml
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/assets/: xposed_init
app/src/main/cpp/: CMakeLists.txt
app/src/main/cpp/daemon/: config_manager.cpp  config_manager.h  injector.cpp  injector.h  jni_bridge.cpp  main.cpp  process_monitor.cpp  process_monitor.h
app/src/main/cpp/hook/: binder_hook.cpp  binder_hook.h  hook_main.cpp  hook_main.h  inline_hook.cpp  inline_hook.h  property_hook.cpp  property_hook.h
app/src/main/cpp/ipc/: socket_client.cpp  socket_client.h  socket_server.cpp  socket_server.h
app/src/main/cpp/spoof/: spoof_engine.cpp  spoof_engine.h
app/src/main/java/com/godmode/app/: GodModeApp.kt
app/src/main/java/com/godmode/app/daemon/: RootManager.kt
app/src/main/java/com/godmode/app/data/db/: AccessLogDao.kt  AppConfigDao.kt  GodModeDatabase.kt
app/src/main/java/com/godmode/app/data/model/: AccessLog.kt  AppAccessSummary.kt  AppConfig.kt
app/src/main/java/com/godmode/app/data/repository/: GodModeRepository.kt
app/src/main/java/com/godmode/app/service/: BootReceiver.kt  DaemonMessageReceiver.kt  GodModeDaemonService.kt
app/src/main/java/com/godmode/app/ui/: AppDetailActivity.kt  LogDetailActivity.kt  MainActivity.kt  SpoofSettingsActivity.kt
app/src/main/java/com/godmode/app/ui/apps/: AppsFragment.kt
app/src/main/java/com/godmode/app/ui/dashboard/: DashboardFragment.kt  DashboardViewModel.kt
app/src/main/java/com/godmode/app/ui/debug/: DebugFragment.kt
app/src/main/java/com/godmode/app/ui/logs/: LogsFragment.kt
app/src/main/java/com/godmode/app/ui/modules/: ModulesFragment.kt
app/src/main/java/com/godmode/app/ui/network/: NetworkFragment.kt
app/src/main/java/com/godmode/app/ui/settings/: SettingsFragment.kt
app/src/main/java/com/godmode/app/ui/setup/: RootDetectionActivity.kt  SetupWizardActivity.kt
app/src/main/java/com/godmode/app/ui/terminal/: TerminalFragment.kt
app/src/main/java/com/godmode/app/xposed/: GoModeXposedModule.kt
app/src/main/res/color/: nav_selector.xml
app/src/main/res/drawable/: bg_badge.xml  ic_apps.xml  ic_copy.xml  ic_log.xml  ic_modules.xml  ic_network.xml  ic_refresh.xml  ic_search.xml  ic_settings.xml  ic_shield.xml  ic_stop.xml  ic_terminal.xml  indicator_green.xml  indicator_red.xml
app/src/main/res/layout/: activity_app_access_detail.xml  activity_app_detail.xml  activity_log_detail.xml  activity_main.xml  activity_root_detection.xml  activity_setup_wizard.xml  activity_spoof_settings.xml  fragment_app_tracking.xml  fragment_apps.xml  fragment_dashboard.xml  fragment_debug.xml  fragment_kernel_verification.xml  fragment_logs.xml  fragment_modules.xml  fragment_network.xml  fragment_settings.xml  fragment_terminal.xml  item_access_detail.xml  item_access_log.xml  item_access_log_full.xml  item_app.xml  item_app_access.xml  item_module.xml
app/src/main/res/menu/: bottom_nav_menu.xml
app/src/main/res/navigation/: nav_graph.xml
app/src/main/res/values/: arrays.xml  colors.xml  strings.xml  themes.xml
app/src/main/res/xml/: backup_rules.xml  data_extraction_rules.xml
memory/: PRD.md
test_reports/: iteration_1.json
(+5 files in other folders)
